istio/add-ambient-mode-namespace/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-ambient-mode-namespace
policies:
- ../add-ambient-mode-namespace.yaml
resources:
- ../.chainsaw-test/patched-ns-disabled.yaml
- ../.chainsaw-test/patched-ns-enabled.yaml
- ../.chainsaw-test/patched-ns-alt.yaml
- ../.chainsaw-test/patched-ns-none.yaml
- ../chainsaw-test/namespace-kube-system.yaml
- ../chainsaw-test/namespace-istio-system.yaml
results:
- policy: add-ambient-mode-namespace
  rule: check-ambient-mode-enabled
  kind: Namespace
  resources:
  - istio-test-none-ns
  - istio-test-dis-ns
  - istio-test-en-ns
  - istio-test-alt-ns
  result: pass

- policy: add-ambient-mode-namespace
  rule: check-ambient-mode-disabled
  kind: Namespace
  resources:
  - kube-system
  result: skip

- policy: add-ambient-mode-namespace
  rule: check-ambient-mode-disabled
  kind: Namespace
  resources:
  - istio-system
  result: skip
